--- a/assets/about.html
+++ b/assets/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="../assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,27 +18,27 @@
     <header>
         <ul class="nav justify-content-evenly">
             <li >
-              <a href="#">Home</a>
+              <a href="../index.html">Home</a>
             </li>
             <li >
-              <a href="./assets/about.html">About</a>
+              <a href="#">About</a>
             </li>
             <li >
-              <a href="./assets/freelance.html">Freelancing</a>
+              <a href="./freelance.html">Freelancing</a>
             </li>
             <li >
-                <a href="./assets/projects.html">Projects</a>
+                <a href="./projects.html">Projects</a>
               </li>
               <li>
-                <a href="./assets/contact.html">Contact</a>
+                <a href="./contact.html">Contact</a>
               </li>
           </ul>
 </header>
-<!--static webpage containing logo, professional picture and short description-->
+
 
 <main class="title">
     <h1> Sanctuary </h1>
-    <p> Freelance Web Design </p>
+    <p> About Sanctuary </p>
 </main>
 
 
