--- a/index.html
+++ b/index.html
@@ -34,13 +34,22 @@
               </li>
           </ul>
 </header>
-<!--static webpage containing logo, professional picture and short description-->
+<!--static webpage containing logo, professional picture and short description
 
 <main class="title">
     <h1> Sanctuary </h1>
     <p> Freelance Web Design </p>
-</main>
+</main>-->
 
+<div class="text-center">
+  <img src="./images/freelance web development (Facebook Cover).png" class="rounded" alt="Sanctuary Logo" width="1000px">
+</div>
+
+<article class="homepagecta">
+      <h3 class="card-title"> what we do</h3>
+      <p class="card-text">At Sanctuary Web Development, we want to take the stress and confusion out of website design and development. That's why we endeavour to make it as simple as possible. You don't need jargon, you don't need patronising, you need your online presence created in a person-centered sort of way.</p>
+      <button><a href="./assets/freelance.html">find out more</a></button>
+</article>
 
 
 
