minor changes to contact and about page

--- a/assets/about.html
+++ b/assets/about.html
@@ -41,7 +41,13 @@
     <p> About Sanctuary </p>
 </main>
 
+ <!--about me-->
+ <article class="aboutcta">
+  <h3 class="card-title"> Hello, I'm Rebecca </h3>
+  <p class="card-text"> I completed a four month front end web developer bootcamp in March 2023 and I have been working freelance ever since.</p>
 
+  <button><a href="./assets/freelance.html">find out more</a></button>
+</article>
 
 
     <!--footer-->
