--- a/assets/contact.html
+++ b/assets/contact.html
@@ -41,7 +41,40 @@
     <p> Contact Sanctuary </p>
 </main>
 
+<!--contact card-->
+<article class="contactcta">
+  <p>
+    <strong>Mobile:</strong> 07462 861387
+  </p>
+  <p>
+    <strong>Email:</strong> sanctuarywebdevelopment@gmail.com
+  </p>
+  <p>
+    <strong>Github:</strong> @thebeccycode
+  </p>
 
+  <!--form-->
+
+  <form name="contact" method="POST" data-netlify="true">
+    <p>
+      <label>Your Name: <br><input type="text" name="name" /></label>
+    </p>
+    <p>
+      <label>Your Email: <br> <input type="email" name="email" /></label>
+    </p>
+    <p>
+      <label>Your Number: <br> <input type="number" name="number" /></label>
+    </p>
+    <p>
+      <label>Message: <br><textarea name="message"></textarea></label>
+    </p>
+    <p>
+      <button type="submit">Send</button>
+    </p>
+  </form>
+  
+
+</article>
 
 
     <!--footer-->
