added cards to demonstrate the sites I have done

--- a/assets/freelance.html
+++ b/assets/freelance.html
@@ -41,7 +41,36 @@
     <p> Freelancing Portfolio </p>
 </main>
 
+<article class="completedwebsites">
+  <div class="card" style="width: 18rem;">
+    <img src="../images/CPR logo PNG.png" class="card-img-top" alt="Sanctuary Logo">
+    <div class="card-body">
+      <h5 class="card-title">Car Paint Repairs</h5>
+      <p class="card-text">This is a website that I built for my very first client.</p>
+      <a href="https://carpaintrepairs.co.uk" class="btn btn-primary">Check it out</a>
+    </div>
+  </div>
 
+  <div class="card" style="width: 18rem;">
+    <img src="../images/square logo no change.png" class="card-img-top" alt="Sanctuary Logo">
+    <div class="card-body">
+      <h5 class="card-title">Saturn Plasterers</h5>
+      <p class="card-text">This was my second clients' website and they were so pleased with it, they decided to hire me to run their social media accounts.</p>
+      <a href="https://saturnplasterers.co.uk" class="btn btn-primary">Check it out</a>
+    </div>
+  </div>
+
+  <div class="card" style="width: 18rem;">
+    <img src="../images/freelance web development (1).png" class="card-img-top" alt="Sanctuary Logo">
+    <div class="card-body">
+      <h5 class="card-title">Coming Soon</h5>
+      <p class="card-text">I am currently working on my third clients' website, but if you'd like, you can check out what projects I am doing.</p>
+      <a href="./projects.html" class="btn btn-primary">Check it out</a>
+    </div>
+  </div>
+
+
+</article>
 
 
     <!--footer-->
