minor changes to descriptions and css

--- a/assets/freelance.html
+++ b/assets/freelance.html
@@ -46,7 +46,7 @@
     <img src="../images/CPR logo PNG.png" class="card-img-top" alt="Sanctuary Logo">
     <div class="card-body">
       <h5 class="card-title">Car Paint Repairs</h5>
-      <p class="card-text">This is a website that I built for my very first client.</p>
+      <p class="card-text">This is a website that I built for my very first client. I also designed the logo with this client.</p>
       <a href="https://carpaintrepairs.co.uk" class="btn btn-primary">Check it out</a>
     </div>
   </div>
@@ -64,7 +64,7 @@
     <img src="../images/freelance web development (1).png" class="card-img-top" alt="Sanctuary Logo">
     <div class="card-body">
       <h5 class="card-title">Coming Soon</h5>
-      <p class="card-text">I am currently working on my third clients' website, but if you'd like, you can check out what projects I am doing.</p>
+      <p class="card-text">I am currently working on my third clients' website, but if you would like to see what I have been learning, click on the link below.</p>
       <a href="./projects.html" class="btn btn-primary">Check it out</a>
     </div>
   </div>
