add an under construction notice and footer

--- a/index.html
+++ b/index.html
@@ -42,20 +42,24 @@
 </main>-->
 
 <div class="text-center">
-  <img src="./images/freelance web development (Facebook Cover).png" class="rounded" alt="Sanctuary Logo" width="1000px">
+  <img src="./images/freelance web development (Facebook Cover).png" class="rounded" alt="Sanctuary Logo" width="800px">
 </div>
 
 <article class="homepagecta">
       <h3 class="card-title"> what we do</h3>
       <p class="card-text">At Sanctuary Web Development, we want to take the stress and confusion out of website design and development. That's why we endeavour to make it as simple as possible. You don't need jargon, you don't need patronising, you need your online presence created in a person-centered sort of way.</p>
-      <button><a href="./assets/freelance.html">find out more</a></button>
+    <a href="./assets/freelance.html">find out more</a>
+
+    <hr>
+    <h6>This portfolio page is still under construction. Thank you for your consideration.
+    </h6>
 </article>
 
 
 
     <!--footer-->
-<footer class="">
-
+<footer class="footer">
+<p> Sanctuary Web Development ©️ 2023 </p>
 </footer>
     
 
