--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/style.css">
+  <link rel="stylesheet" href="./style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,32 +24,22 @@
   <!--navigation bar/component 1-->
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="./assets/portfolio.html">Portfolio</a></li>
+      <li><a href="../index.html">Home</a></li>
+      <li><a href="#">Portfolio</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Reviews</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
 
-   <!--header/component2
+   <!--header/component2-->
    <header class="header">
     <div class="image-container">
-      <img src="./images/freelance web development (Facebook Cover) (1).png" alt="Sanctuary Logo">
+      <img src="../images/freelance web development (Facebook Cover) (1).png" alt="Sanctuary Logo">
     </div>
    
-  </header>-->
+  </header>
 
- 
-  <div class="divider-photo">
-    <div class="hero-image">
-      <div class="hero-text">
-        <h1 style="font-size:60px">Sanctuary Web Development</h1>
-        <h6>A Digital Services Company</h6>
-        
-      </div>
-    </div>
-  </div>
 
   <!--menu and about me/component3-->
   <main class="comp3-container">
@@ -65,26 +55,25 @@
 
     </div>
     <div class="vl"></div>
-    <div class="about-me">
+    <div class="portfolio">
 
-      <h4>Do you need help putting your business online?</h4>
-      <p> Whether it's a website you know your company could do with or a social media presence you don't have the time to run, we can help!</p>
-      <p>We will work with you to create the online presence that suits you and your business. We keep things straight
-        forward and our prices even simpler!</p>
-        
-        <p>And if there's something you need but don't see it on the price list, feel
-        free to enquire about what it is that you are looking for as we can provide tailor made online services for you.
-      </p>
-      <button class="comp3-cta">Learn More</button>
-    </div>
-
+      <h1>Portfolio</h1>
+        <hr>
+      <h3>Car Paint Repairs</h3>
+      <p>Car Paint Repairs was the first website and it's still a live, working website today. It was a huge learning curve as I had just finished my front-end web development course and whilst I could code, I didn't know how to build for someone else or run a business. I designed this clients logo and then built a website for them - and whilst I'm set to adjust their website in the following month (at no extra charge) I'm still pretty proud of it. Click this <a href="https://www.carpaintrepairs.co.uk">link</a> to view it.</p>
+      <h3>Saturn Plasterers</h3>
+      <p>I had a bit more knowledge on what I was doing by the time I started working for my second client. I had an old website to create my draft version and soon the official version was live and working on the internet. If you'd like to see it, click <a href="https://www.saturnplasterers.co.uk">here</a>. I am currently running this companies' social media marketing campaign too. </p>
+      <h3>Sanctuary Web Development</h3>
+      <p> It goes without saying that this website is also part of my portfolio. Coded entirely, I hope that it showcases my skills as a front-end web developer.</p>
+      <h3>COMING SOON</h3>
+      <p>I am currently working on my next client's website design and will update with a much better description once completed! </p>
 
   </main>
 
   <footer>
     <div class="footer-container">
       <div class="image-container">
-        <img src="./images/freelance web development (Facebook Cover) (1).png" alt="Sanctuary Logo">
+        <img src="../images/freelance web development (Facebook Cover) (1).png" alt="Sanctuary Logo">
       </div>
       <p class="thankyou">Thank you for visiting Sanctuary Web Development.</p>
       <p class="copyright">
