added reviews page, next step is to add contact page

--- a/assets/reviews.html
+++ b/assets/reviews.html
@@ -13,7 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Castoro+Titling&family=Crimson+Pro&family=Quicksand:wght@300;500&family=Roboto+Condensed:wght@300&display=swap"
         rel="stylesheet">
-    <title> HOME Sanctuary Web Development | taking the stress out of tailored web development </title>
+    <title> Sanctuary Web Development | taking the stress out of tailored web development </title>
 </head>
 
 <body>
@@ -25,8 +25,8 @@
     <nav>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="./services.html">Services</a></li>
+            <li><a href="./portfolio.html">Portfolio</a></li>
+            <li><a href="#">Services</a></li>
             <li><a href="#">Reviews</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
@@ -37,7 +37,7 @@
         <div class="hero-portfolio">
 
             <div class="hero-text-portfolio">
-                <h1> Sanctuary Portfolio</h1>
+                <h1> Sanctuary Reviews</h1>
             </div>
 
         </div>
@@ -51,7 +51,7 @@
             <h4 class="highlights">Highlights</h4>
             <ul>
                 <li><a href="#">Digital Services</a></li>
-                <li><a href="#">Latest Projects</a></li>
+                <li><a href="./portfolio.html">Latest Projects</a></li>
                 <li><a href="#">Our Ethos</a></li>
                 <li><a href="#">Collaboration</a></li>
 
@@ -59,28 +59,37 @@
 
         </div>
         <div class="vl"></div>
-        <div class="portfolio">
-
-            <h3><strong>Portfolio</strong></h3>
+        
+        <div class="reviews-container">
             <hr>
-            <h3>Car Paint Repairs</h3>
-            <p>Car Paint Repairs was the first website and it's still a live, working website today. It was a huge
-                learning curve as I had just finished my front-end web development course and whilst I could code, I
-                didn't know how to build for someone else or run a business. I designed this clients logo and then built
-                a website for them - and whilst I'm set to adjust their website in the following month (at no extra
-                charge) I'm still pretty proud of it. Click this <a href="https://www.carpaintrepairs.co.uk">link</a> to
-                view it.</p>
-            <h3>Saturn Plasterers</h3>
-            <p>I had a bit more knowledge on what I was doing by the time I started working for my second client. I had
-                an old website to create my draft version and soon the official version was live and working on the
-                internet. If you'd like to see it, click <a href="https://www.saturnplasterers.co.uk">here</a>. I am
-                currently running this companies' social media marketing campaign too. </p>
-            <h3>Sanctuary Web Development</h3>
-            <p> It goes without saying that this website is also part of my portfolio. Coded entirely, I hope that it
-                showcases my skills as a front-end web developer.</p>
-            <h3>COMING SOON</h3>
-            <p>I am currently working on my next client's website design and will update with a much better description
-                once completed! </p>
+
+            <div class="card">
+                <img src="../images/CPR logo PNG.png" alt="car paint repairs logo">
+                <p class="review-title"><strong>What the owner of Car Paint Repairs had to say...</strong></p>
+                <p class="review-quote">"<em>absolutely fantastic service. website.made exactly how I wanted it and
+                        within the time scales agreed. will be continuing to use beccy for further development of the
+                        site in the future and can thoroughly recommend.</em>"</p>
+                <small class="review-cite">review submitted on <a
+                        href="https://www.facebook.com/profile.php?id=100095138801946&sk=reviews">Facebook</a></small>
+
+            </div>
+            <div class="card">
+                
+                <img src="../images/square logo no change.png" alt="Saturn Plasterers logo">
+                <p class="review-title"><strong>What the owner of Saturn Plasterers had to say...</strong></p>
+                <p class="review-quote">"<em>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, magnam?</em>"</p>
+                <small class="review-cite">review submitted on <a
+                        href="https://www.facebook.com/profile.php?id=100095138801946&sk=reviews">Facebook</a></small>
+
+            </div>
+
+
+
+
+
+
+        </div>
+
 
     </main>
 
