made sure all the links are working, now adjusting some css to make web design more cohesive

--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -25,10 +25,10 @@
     <nav>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="./portfolio.html">Portfolio</a></li>
             <li><a href="./services.html">Services</a></li>
-            <li><a href="#">Reviews</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./reviews.html">Reviews</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -50,8 +50,8 @@
         <div class="menu">
             <h4 class="highlights">Highlights</h4>
             <ul>
-                <li><a href="#">Digital Services</a></li>
-                <li><a href="#">Latest Projects</a></li>
+                <li><a href="./services.html">Digital Services</a></li>
+                <li><a href="./portfolio.html">Latest Projects</a></li>
                 <li><a href="#">Our Ethos</a></li>
                 <li><a href="#">Collaboration</a></li>
 
@@ -60,27 +60,45 @@
         </div>
         <div class="vl"></div>
         <div class="portfolio">
+            <div class="card portfolio-card">
+                
+                <h1>Car Paint Repairs</h1>
+                <p>Car Paint Repairs was the first website and it's still a live, working website today. It was a huge
+                    learning curve as I had just finished my front-end web development course and whilst I could code, I
+                    didn't know how to build for someone else or run a business. I designed this clients logo and then
+                    built
+                    a website for them - and whilst I'm set to adjust their website in the following month (at no extra
+                    charge) I'm still pretty proud of it. Click this <a
+                        href="https://www.carpaintrepairs.co.uk">link</a> to
+                    view it.</p>
+            </div>
 
-            <h3><strong>Portfolio</strong></h3>
-            <hr>
-            <h3>Car Paint Repairs</h3>
-            <p>Car Paint Repairs was the first website and it's still a live, working website today. It was a huge
-                learning curve as I had just finished my front-end web development course and whilst I could code, I
-                didn't know how to build for someone else or run a business. I designed this clients logo and then built
-                a website for them - and whilst I'm set to adjust their website in the following month (at no extra
-                charge) I'm still pretty proud of it. Click this <a href="https://www.carpaintrepairs.co.uk">link</a> to
-                view it.</p>
-            <h3>Saturn Plasterers</h3>
-            <p>I had a bit more knowledge on what I was doing by the time I started working for my second client. I had
-                an old website to create my draft version and soon the official version was live and working on the
-                internet. If you'd like to see it, click <a href="https://www.saturnplasterers.co.uk">here</a>. I am
-                currently running this companies' social media marketing campaign too. </p>
-            <h3>Sanctuary Web Development</h3>
-            <p> It goes without saying that this website is also part of my portfolio. Coded entirely, I hope that it
-                showcases my skills as a front-end web developer.</p>
-            <h3>COMING SOON</h3>
-            <p>I am currently working on my next client's website design and will update with a much better description
-                once completed! </p>
+            <div class="card portfolio-card">
+                <h1>Saturn Plasterers</h1>
+                <p>I had a bit more knowledge on what I was doing by the time I started working for my second client. I
+                    had
+                    an old website to create my draft version and soon the official version was live and working on the
+                    internet. If you'd like to see it, click <a href="https://www.saturnplasterers.co.uk">here</a>. I am
+                    currently running this companies' social media marketing campaign too. </p>
+
+            </div>
+
+            <div class="card portfolio-card">
+                <h1>Sanctuary Web Development</h1>
+                <p> It goes without saying that this website is also part of my portfolio. Coded entirely, I hope that
+                    it
+                    showcases my skills as a front-end web developer.</p>
+
+            </div>
+
+            <div class="card portfolio-card">
+                <h1>Coming Soon</h1>
+                <p>I am currently working on my next client's website design and will update with a much better
+                    description
+                    once completed! </p>
+
+            </div>
+
 
     </main>
 
