--- a/index.html
+++ b/index.html
@@ -27,18 +27,10 @@
       <li><a href="#">Home</a></li>
       <li><a href="./assets/portfolio.html">Portfolio</a></li>
       <li><a href="./assets/services.html">Services</a></li>
-      <li><a href="#">Reviews</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="./assets/reviews.html">Reviews</a></li>
+      <li><a href="./assets/contact.html">Contact</a></li>
     </ul>
   </nav>
-
-  <!--header/component2
-   <header class="header">
-    <div class="image-container">
-      <img src="./images/freelance web development (Facebook Cover) (1).png" alt="Sanctuary Logo">
-    </div>
-   
-  </header>-->
 
 
   <div class="divider-photo">
@@ -57,8 +49,8 @@
     <div class="menu">
       <h4 class="highlights">Highlights</h4>
       <ul>
-        <li><a href="#">Digital Services</a></li>
-        <li><a href="#">Latest Projects</a></li>
+        <li><a href="./assets/services.html">Digital Services</a></li>
+        <li><a href="./assets/portfolio.html">Latest Projects</a></li>
         <li><a href="#">Our Ethos</a></li>
         <li><a href="#">Collaboration</a></li>
 
