--- a/assets/reviews.html
+++ b/assets/reviews.html
@@ -26,9 +26,9 @@
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="./portfolio.html">Portfolio</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Reviews</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./services.html">Services</a></li>
+            <li><a href="./reviews.html">Reviews</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
 
