--- a/assets/services.html
+++ b/assets/services.html
@@ -27,8 +27,8 @@
             <li><a href="../index.html">Home</a></li>
             <li><a href="./portfolio.html">Portfolio</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Reviews</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="./reviews.html">Reviews</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -50,7 +50,7 @@
         <div class="menu">
             <h4 class="highlights">Highlights</h4>
             <ul>
-                <li><a href="#">Digital Services</a></li>
+                <li><a href="./services.html">Digital Services</a></li>
                 <li><a href="./portfolio.html">Latest Projects</a></li>
                 <li><a href="#">Our Ethos</a></li>
                 <li><a href="#">Collaboration</a></li>
