final adjustments for today including header changes, next steps include adding a ethos page and changing the logo as the company is now called sanctuary digital instead of sanctuary web development

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Castoro+Titling&family=Crimson+Pro&family=Quicksand:wght@300;500&family=Roboto+Condensed:wght@300&display=swap"
     rel="stylesheet">
-  <title> Sanctuary Web Development | taking the stress out of tailored web development </title>
+  <title> Sanctuary Digital Services </title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
     <div class="hero-image">
       <div class="hero-text">
 
-        <h1 style="font-size:72px">Sanctuary</h1>
+        <h1 style="font-size:72px">Sanctuary Digital</h1>
         <h5> Web Development & Social Media Marketing</h5>
       </div>
     </div>
@@ -47,7 +47,7 @@
   <!--menu and about me/component3-->
   <main class="comp3-container">
     <div class="menu">
-      <h4 class="highlights">Highlights</h4>
+      <h3 class="highlights"><strong>Highlights</strong></h3>
       <ul>
         <li><a href="./assets/services.html">Digital Services</a></li>
         <li><a href="./assets/portfolio.html">Latest Projects</a></li>
