added waynes' review

--- a/assets/reviews.html
+++ b/assets/reviews.html
@@ -77,7 +77,7 @@
                 
                 <img src="../images/square logo no change.png" alt="Saturn Plasterers logo">
                 <p class="review-title"><strong>What the owner of Saturn Plasterers had to say...</strong></p>
-                <p class="review-quote">"<em>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, magnam?</em>"</p>
+                <p class="review-quote">"<em>Rebecca has listened to my business needs and ideas, offered knowledgeable advice and, in doing so, has created my website and social media pages. She is working diligently on making my company more visible, including sending me much needed reminders to send her content she can use in order to achieve this and thus help me reach my goals. I would definitely recommend [Sanctuary Digital] to help you to grow your business too.</em>"</p>
                 <small class="review-cite">review submitted on <a
                         href="https://www.facebook.com/profile.php?id=100095138801946&sk=reviews">Facebook</a></small>
 
