--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
 
   </main>
 
+  <article class="ethos-container">
+    <div class="ethos-bio">
+      <h4>Our Company Ethos</h4>
+      <p>At the present time, we want our company to grow but we want it to grow in a way that benefits the growth and development of other small businesses. We want our prices to remain affordable, our targets to remain scalable, and our clientele to be happy with what we can do for them. That's why our ethos is about removing as much stress as possible out of digital expansion.</p>
+    </div>
+
+  </article>
+
   <footer>
     <div class="footer-container">
       <div class="image-container">
