changes to all pages, done for today, next time will encorporate making it all responsive to different viewing screens

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -52,8 +52,8 @@
             <ul>
                 <li><a href="./services.html">Digital Services</a></li>
                 <li><a href="./portfolio.html">Latest Projects</a></li>
-                <li><a href="#">Our Ethos</a></li>
-                <li><a href="#">Collaboration</a></li>
+                <li><a href="../#ethos">Our Ethos</a></li>
+                <li><a href="../#collabs">Collaboration</a></li>
 
             </ul>
 
@@ -61,7 +61,7 @@
         <div class="vl"></div>
 
         <div class="contact-container">
-            <hr>
+            
 
             <div class="contact-card">
                 <h3>How to get in touch...</h3>
@@ -76,7 +76,7 @@
 
 
             <div class="form-card">
-                <h3>or fill out our form...</h3>
+                <h3>Or fill out our form...</h3>
                 <form name="contact" netlify>
 
                     <label for="name">Name</label><br>
