--- a/assets/portfolio.html
+++ b/assets/portfolio.html
@@ -52,8 +52,8 @@
             <ul>
                 <li><a href="./services.html">Digital Services</a></li>
                 <li><a href="./portfolio.html">Latest Projects</a></li>
-                <li><a href="#">Our Ethos</a></li>
-                <li><a href="#">Collaboration</a></li>
+                <li><a href="../#ethos">Our Ethos</a></li>
+                <li><a href="../#collabs">Collaboration</a></li>
 
             </ul>
 
