--- a/assets/services.html
+++ b/assets/services.html
@@ -53,8 +53,8 @@
             <ul>
                 <li><a href="./services.html">Digital Services</a></li>
                 <li><a href="./portfolio.html">Latest Projects</a></li>
-                <li><a href="#">Our Ethos</a></li>
-                <li><a href="#">Collaboration</a></li>
+                <li><a href="../#ethos">Our Ethos</a></li>
+                <li><a href="../#collabs">Collaboration</a></li>
 
             </ul>
 
@@ -62,7 +62,7 @@
         <div class="vl"></div>
         <div class="services-container">
             <h3><strong>Services</strong></h3>
-            <hr>
+            
             <p>Our business offers digital services from website building to running your social media business pages.
                 Below are the services and the prices you can expect to pay for them:</p>
             <br>
