--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <ul>
         <li><a href="./assets/services.html">Digital Services</a></li>
         <li><a href="./assets/portfolio.html">Latest Projects</a></li>
-        <li><a href="#">Our Ethos</a></li>
-        <li><a href="#">Collaboration</a></li>
+        <li><a href="../#ethos">Our Ethos</a></li>
+        <li><a href="../#collabs">Collaboration</a></li>
 
       </ul>
 
@@ -74,11 +74,15 @@
 
 
   </main>
-
+  
   <article class="ethos-container">
-    <div class="ethos-bio">
-      <h4>Our Company Ethos</h4>
+    <div class="ethos-bio" >
+      <h4 id="ethos">Our Company Ethos</h4>
       <p>At the present time, we want our company to grow but we want it to grow in a way that benefits the growth and development of other small businesses. We want our prices to remain affordable, our targets to remain scalable, and our clientele to be happy with what we can do for them. That's why our ethos is about removing as much stress as possible out of digital expansion.</p>
+    </div>
+    <div class="collab-info">
+      <h4 id="collabs">Collaborations</h4>
+      <p>I have collaborated with people in the past and would happily do so again. I know many talented web developers, graphic designers and growth experts which means I'm at a huge advantage when it comes to outsourcing! This means that your business is at an advantage, too. Why? Well, it means you only get the best of the best!</p>
     </div>
 
   </article>
