--- a/assets/reviews.html
+++ b/assets/reviews.html
@@ -52,8 +52,8 @@
             <ul>
                 <li><a href="./services.html">Digital Services</a></li>
                 <li><a href="./portfolio.html">Latest Projects</a></li>
-                <li><a href="#">Our Ethos</a></li>
-                <li><a href="#">Collaboration</a></li>
+                <li><a href="../#ethos">Our Ethos</a></li>
+                <li><a href="../#collabs">Collaboration</a></li>
 
             </ul>
 
@@ -61,7 +61,6 @@
         <div class="vl"></div>
         
         <div class="reviews-container">
-            <hr>
 
             <div class="card">
                 <img src="../images/CPR logo PNG.png" alt="car paint repairs logo">
