--- a/assets/reviews.html
+++ b/assets/reviews.html
@@ -21,16 +21,20 @@
 
 
 
-    <!--navigation bar/component 1-->
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./portfolio.html">Portfolio</a></li>
-            <li><a href="./services.html">Services</a></li>
-            <li><a href="./reviews.html">Reviews</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-        </ul>
-    </nav>
+   <!--navigation bar/component 1-->
+  <div class="navigationbar">
+    <div class="dropdown">
+      <button onclick="navDropdown()" class="dropbtn">Menu</button>
+      <div id="myDropdown" class="dropdown-content">
+        <!--menu links-->
+        <a href="../index.html">Home</a>
+        <a href="./portfolio.html">Portfolio</a>
+        <a href="./services.html">Services</a>
+        <a href="./reviews.html">Reviews</a>
+        <a href="./contact.html">Contact</a>
+      </div>
+    </div>
+  </div>>
 
     <!--header/component2-->
     <div class="divider-photo">
@@ -114,6 +118,7 @@
 
 
 <!--Script tags-->
+<script src="./sanctuary.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
