--- a/assets/services.html
+++ b/assets/services.html
@@ -22,15 +22,20 @@
 
 
     <!--navigation bar/component 1-->
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./portfolio.html">Portfolio</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="./reviews.html">Reviews</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-        </ul>
-    </nav>
+
+    <div class="navigationbar">
+        <div class="dropdown">
+            <button onclick="navDropdown()" class="dropbtn">Menu</button>
+            <div id="myDropdown" class="dropdown-content">
+                <!--menu links-->
+                <a href="../index.html">Home</a>
+                <a href="./portfolio.html">Portfolio</a>
+                <a href="./services.html">Services</a>
+                <a href="./reviews.html">Reviews</a>
+                <a href="./contact.html">Contact</a>
+            </div>
+        </div>
+    </div>
 
     <!--header/component2-->
 
@@ -62,7 +67,7 @@
         <div class="vl"></div>
         <div class="services-container">
             <h3><strong>Services</strong></h3>
-            
+
             <p>Our business offers digital services from website building to running your social media business pages.
                 Below are the services and the prices you can expect to pay for them:</p>
             <br>
@@ -135,6 +140,7 @@
 
 
 <!--Script tags-->
+<script src=".sanctuary.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
