--- a/index.html
+++ b/index.html
@@ -22,15 +22,21 @@
 
 
   <!--navigation bar/component 1-->
-  <nav>
-    <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="./assets/portfolio.html">Portfolio</a></li>
-      <li><a href="./assets/services.html">Services</a></li>
-      <li><a href="./assets/reviews.html">Reviews</a></li>
-      <li><a href="./assets/contact.html">Contact</a></li>
-    </ul>
-  </nav>
+  <div class="navigationbar">
+  <div class="dropdown">
+    <button onclick="navDropdown()" class="dropbtn">Menu</button>
+    <div id="myDropdown" class="dropdown-content">
+      <!--menu links-->
+      <a href="#">Home</a>
+      <a href="./assets/portfolio.html">Portfolio</a>
+      <a href="./assets/services.html">Services</a>
+      <a href="./assets/reviews.html">Reviews</a>
+      <a href="./assets/contact.html">Contact</a>
+    </div>
+  </div>
+</div>
+
+  
 
 
   <div class="divider-photo">
@@ -109,6 +115,7 @@
 
 
 <!--Script tags-->
+<script src="./assets/sanctuary.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/cdb39132d5.js" crossorigin="anonymous"></script>
