media queries for navigation complete AND logos changed to meet Sanctuary Digital's new look

--- a/assets/reviews.html
+++ b/assets/reviews.html
@@ -41,7 +41,7 @@
         <div class="hero-image">
           <div class="hero-text">
     
-            <h1 style="font-size:72px">Reviews</h1>
+            <h1>Reviews</h1>
             
           </div>
         </div>
@@ -99,7 +99,7 @@
     <footer>
         <div class="footer-container">
             <div class="image-container">
-                <img src="../images/freelance web development (Facebook Cover) (1).png" alt="Sanctuary Logo">
+                <img src="../images/Sanctuary digital (1820 × 980px) (1).png" alt="Sanctuary Logo" width="50%">
             </div>
             <p class="thankyou">Thank you for visiting Sanctuary Web Development.</p>
             <p class="copyright">
