--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
 
   <!--navigation bar/component 1-->
   <div class="navigationbar">
-  <div class="dropdown">
-    <button onclick="navDropdown()" class="dropbtn">Menu</button>
-    <div id="myDropdown" class="dropdown-content">
-      <!--menu links-->
-      <a href="#">Home</a>
-      <a href="./assets/portfolio.html">Portfolio</a>
-      <a href="./assets/services.html">Services</a>
-      <a href="./assets/reviews.html">Reviews</a>
-      <a href="./assets/contact.html">Contact</a>
+    <div class="dropdown">
+      <button onclick="navDropdown()" class="dropbtn">Menu</button>
+      <div id="myDropdown" class="dropdown-content">
+        <!--menu links-->
+        <a href="#">Home</a>
+        <a href="./assets/portfolio.html">Portfolio</a>
+        <a href="./assets/services.html">Services</a>
+        <a href="./assets/reviews.html">Reviews</a>
+        <a href="./assets/contact.html">Contact</a>
+      </div>
     </div>
   </div>
-</div>
 
-  
+
 
 
   <div class="divider-photo">
     <div class="hero-image">
       <div class="hero-text">
 
-        <h1 style="font-size:72px">Sanctuary Digital</h1>
+        <h1>Sanctuary Digital</h1>
         <h5> Web Development & Social Media Marketing</h5>
       </div>
     </div>
@@ -80,15 +80,20 @@
 
 
   </main>
-  
+
   <article class="ethos-container">
-    <div class="ethos-bio" >
+    <div class="ethos-bio">
       <h4 id="ethos">Our Company Ethos</h4>
-      <p>At the present time, we want our company to grow but we want it to grow in a way that benefits the growth and development of other small businesses. We want our prices to remain affordable, our targets to remain scalable, and our clientele to be happy with what we can do for them. That's why our ethos is about removing as much stress as possible out of digital expansion.</p>
+      <p>At the present time, we want our company to grow but we want it to grow in a way that benefits the growth and
+        development of other small businesses. We want our prices to remain affordable, our targets to remain scalable,
+        and our clientele to be happy with what we can do for them. That's why our ethos is about removing as much
+        stress as possible out of digital expansion.</p>
     </div>
     <div class="collab-info">
       <h4 id="collabs">Collaborations</h4>
-      <p>I have collaborated with people in the past and would happily do so again. I know many talented web developers, graphic designers and growth experts which means I'm at a huge advantage when it comes to outsourcing! This means that your business is at an advantage, too. Why? Well, it means you only get the best of the best!</p>
+      <p>I have collaborated with people in the past and would happily do so again. I know many talented web developers,
+        graphic designers and growth experts which means I'm at a huge advantage when it comes to outsourcing! This
+        means that your business is at an advantage, too. Why? Well, it means you only get the best of the best!</p>
     </div>
 
   </article>
@@ -96,7 +101,7 @@
   <footer>
     <div class="footer-container">
       <div class="image-container">
-        <img src="./images/freelance web development (Facebook Cover) (1).png" alt="Sanctuary Logo">
+        <img src="./images/Sanctuary digital (1820 × 980px) (1).png" alt="Sanctuary Logo" width="50%">
       </div>
       <p class="thankyou">Thank you for visiting Sanctuary Web Development.</p>
       <p class="copyright">
