--- a/assets/services.html
+++ b/assets/services.html
@@ -43,7 +43,7 @@
         <div class="hero-image">
             <div class="hero-text">
 
-                <h1 style="font-size:72px">Services</h1>
+                <h1>Services</h1>
 
             </div>
         </div>
@@ -121,7 +121,7 @@
     <footer>
         <div class="footer-container">
             <div class="image-container">
-                <img src="../images/freelance web development (Facebook Cover) (1).png" alt="Sanctuary Logo">
+                <img src="../images/Sanctuary digital (1820 × 980px) (1).png" alt="Sanctuary Logo" width="50%">
             </div>
             <p class="thankyou">Thank you for visiting Sanctuary Web Development.</p>
             <p class="copyright">
@@ -140,7 +140,7 @@
 
 
 <!--Script tags-->
-<script src=".sanctuary.js"></script>
+<script src="./sanctuary.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
