major changes to responsive web design css, still some left to do

--- a/assets/services.html
+++ b/assets/services.html
@@ -24,7 +24,8 @@
     <!--navigation bar/component 1-->
 
     <div class="navigationbar">
-        <div class="dropdown">
+        <img class="navlogo" src="../images/sanctuarydigital long.png" height="80px">
+        <div class="dropdown nav-right">
             <button onclick="navDropdown()" class="dropbtn">Menu</button>
             <div id="myDropdown" class="dropdown-content">
                 <!--menu links-->
@@ -53,7 +54,7 @@
 
     <!--menu and about me/component3-->
     <main class="comp3-container">
-        <div class="menu">
+        <div class="highlightsmenu">
             <h3 class="highlights"><strong>Highlights</strong></h3>
             <ul>
                 <li><a href="./services.html">Digital Services</a></li>
@@ -121,7 +122,7 @@
     <footer>
         <div class="footer-container">
             <div class="image-container">
-                <img src="../images/Sanctuary digital (1820 × 980px) (1).png" alt="Sanctuary Logo" width="50%">
+                <img src="../images/sanctuarydigital stacked.png" alt="Sanctuary Logo" >
             </div>
             <p class="thankyou">Thank you for visiting Sanctuary Web Development.</p>
             <p class="copyright">
