--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 
 <body>
 
-
+ 
 
 
   <!--navigation bar/component 1-->
   <div class="navigationbar">
-    <div class="dropdown">
-      <button onclick="navDropdown()" class="dropbtn">Menu</button>
+    <img class="navlogo" src="./images/sanctuarydigital long.png" height="80px">
+    <div class="dropdown nav-right">
+      <button onclick="navDropdown()" class="dropbtn">menu</button>
       <div id="myDropdown" class="dropdown-content">
         <!--menu links-->
         <a href="#">Home</a>
@@ -34,17 +35,17 @@
         <a href="./assets/contact.html">Contact</a>
       </div>
     </div>
+    
   </div>
 
 
-
-
+<!--hero image-->
   <div class="divider-photo">
     <div class="hero-image">
       <div class="hero-text">
 
-        <h1>Sanctuary Digital</h1>
-        <h5> Web Development & Social Media Marketing</h5>
+        <h1 class="herotitle">Sanctuary Digital</h1>
+        <h5 class="herotagline"> Web Development & Social Media</h5>
       </div>
     </div>
 
@@ -52,7 +53,7 @@
 
   <!--menu and about me/component3-->
   <main class="comp3-container">
-    <div class="menu">
+    <div class="highlightsmenu">
       <h3 class="highlights"><strong>Highlights</strong></h3>
       <ul>
         <li><a href="./assets/services.html">Digital Services</a></li>
@@ -77,9 +78,7 @@
       </p>
       <button class="comp3-cta">Learn More</button>
     </div>
-
-
-  </main>
+ 
 
   <article class="ethos-container">
     <div class="ethos-bio">
@@ -97,11 +96,12 @@
     </div>
 
   </article>
+</main>
 
   <footer>
     <div class="footer-container">
       <div class="image-container">
-        <img src="./images/Sanctuary digital (1820 × 980px) (1).png" alt="Sanctuary Logo" width="50%">
+        <img src="./images/sanctuarydigital stacked.png" alt="Sanctuary Logo">
       </div>
       <p class="thankyou">Thank you for visiting Sanctuary Web Development.</p>
       <p class="copyright">
