smaller screen size rmq is done

--- a/assets/contact.html
+++ b/assets/contact.html
@@ -72,11 +72,19 @@
             <div class="contact-card">
                 <h3>How to get in touch...</h3>
 
-                <p><a href="#">Email</a> us at sanctuarywebdevelopment@gmail.com .</p>
-
-                <p> Send us a message on <a href="https://www.facebook.com/profile.php?id=100095138801946">Facebook</a>
-                    at Sanctuary Web Development .</p>
-
+                <h6 class="contact-email"> Send us an
+                    <a href="mailto:<nowiki> info@sanctuary-digital.com?" subject="HTML link"> email.</a>
+                </h6>
+                <h6 class="contact-fb"> Or send a message through our
+                    <a href="https://www.facebook.com/sanctuarydigitaluk/"> Facebook Page</a>
+                </h6>
+                <h6 class="contact-ig">
+                    <a href="https://www.instagram.com/sanctuarydigitaluk/"> Our Instagram Page</a> is another
+                    alternative.
+                </h6>
+                <h6 class="contact-num"> But you could simply
+                    <a href="tel:07462861387"> call us.</a>
+                </h6>
 
 
             </div>
@@ -120,9 +128,13 @@
             <div class="image-container">
                 <img src="../images/sanctuarydigital stacked.png" alt="Sanctuary Logo">
             </div>
-            <p class="thankyou">Thank you for visiting Sanctuary Web Development.</p>
+            <p class="thankyou">Thank you for visiting Sanctuary Web Digital.</p>
+
+            <a href="mailto:<nowiki> info@sanctuary-digital.com?" subject="HTML link"> email</a> <p>info@sanctuary-digital.com</p>
+            <a href="tel:07462861387"> call us</a><p>07462861387</p>
+
             <p class="copyright">
-                &copy; 2023 Sanctuary Web Development. All rights reserved.
+                &copy; 2023 Sanctuary Digital. All rights reserved.
             </p>
         </div>
 
