--- a/assets/services.html
+++ b/assets/services.html
@@ -122,13 +122,18 @@
     <footer>
         <div class="footer-container">
             <div class="image-container">
-                <img src="../images/sanctuarydigital stacked.png" alt="Sanctuary Logo" >
+                <img src="../images/sanctuarydigital stacked.png" alt="Sanctuary Logo">
             </div>
-            <p class="thankyou">Thank you for visiting Sanctuary Web Development.</p>
+            <p class="thankyou">Thank you for visiting Sanctuary Web Digital.</p>
+
+            <a href="mailto:<nowiki> info@sanctuary-digital.com?" subject="HTML link"> email</a> <p>info@sanctuary-digital.com</p>
+            <a href="tel:07462861387"> call us</a><p>07462861387</p>
+
             <p class="copyright">
-                &copy; 2023 Sanctuary Web Development. All rights reserved.
+                &copy; 2023 Sanctuary Digital. All rights reserved.
             </p>
         </div>
+
 
 
 
