--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Castoro+Titling&family=Crimson+Pro&family=Quicksand:wght@300;500&family=Roboto+Condensed:wght@300&display=swap"
     rel="stylesheet">
-  <title> Sanctuary Digital Services </title>
+  <title> Sanctuary Digital | a web development and social media marketing agency | a calmer approach to business online
+  </title>
 </head>
 
 <body>
 
- 
+
 
 
   <!--navigation bar/component 1-->
@@ -35,17 +36,17 @@
         <a href="./assets/contact.html">Contact</a>
       </div>
     </div>
-    
+
   </div>
 
 
-<!--hero image-->
+  <!--hero image-->
   <div class="divider-photo">
     <div class="hero-image">
       <div class="hero-text">
 
         <h1 class="herotitle">Sanctuary Digital</h1>
-        <h5 class="herotagline"> Web Development & Social Media</h5>
+        <h5 class="herotagline">a calmer approach to business online</h5>
       </div>
     </div>
 
@@ -67,45 +68,72 @@
     <div class="vl"></div>
     <div class="about-me">
 
-      <h4>Do you need help putting your business online?</h4>
-      <p> Whether it's a website you know your company could do with or a social media presence you don't have the time
-        to run, we can help!</p>
-      <p>We will work with you to create the online presence that suits you and your business. We keep things straight
-        forward and our prices even simpler!</p>
+      <h4>A calmer approach to business online</h4>
+      <hr>
 
-      <p>And if there's something you need but don't see it on the price list, feel
-        free to enquire about what it is that you are looking for as we can provide tailor made online services for you.
+      <p>
+        We know that launching your business justice online can be overwhelming.
       </p>
+      <p>
+        There is so much to think about: design, application, social media, advertising...
+      </p>
+      <p>
+        Not to mention, it takes so much time
+        to get it all up and running whilst you're busy running your business.
+      </p>
+      <p>
+        That's where Sanctuary Digital comes in.
+      </p>
+      <p>
+        We don't believe in bamboozling you with jargon, or overselling products.  We know that fair pricing, down-to-earth communication and scalable target setting, we can provide you with a package to suit your needs.
+      </p>
+      <p>
+        If you'd like to see our baseline prices, to get an idea of what our services might cost you, just click that button below ↓ .
+      </p>
+
+
       <button class="comp3-cta">Learn More</button>
     </div>
- 
 
-  <article class="ethos-container">
-    <div class="ethos-bio">
-      <h4 id="ethos">Our Company Ethos</h4>
-      <p>At the present time, we want our company to grow but we want it to grow in a way that benefits the growth and
-        development of other small businesses. We want our prices to remain affordable, our targets to remain scalable,
-        and our clientele to be happy with what we can do for them. That's why our ethos is about removing as much
-        stress as possible out of digital expansion.</p>
-    </div>
-    <div class="collab-info">
-      <h4 id="collabs">Collaborations</h4>
-      <p>I have collaborated with people in the past and would happily do so again. I know many talented web developers,
-        graphic designers and growth experts which means I'm at a huge advantage when it comes to outsourcing! This
-        means that your business is at an advantage, too. Why? Well, it means you only get the best of the best!</p>
-    </div>
 
-  </article>
-</main>
+    <article class="ethos-container">
+      <div class="ethos-bio">
+
+        <h4 id="ethos">Our Company Ethos</h4>
+        <hr>
+        <p>
+          Our goal concerns growth.
+        </p>
+        <p>
+          Our company will help your business grow, and we grow with you. Then we want to use that to help others grow. Such as small businesses such as graphic designers, product owners, social media managers and web developers.
+        </p>
+        <p>
+          We are already in contact with so many amazing people that are talented and can help you achieve your business dreams. We outsource to support our digital community and if you want something that we cannot provide, we will signpost you to someone who can.
+        </p>
+      </div>
+
+
+      <div class="collab-info">
+        <h4 id="collabs">Collaborations</h4>
+        <hr>
+        <p>
+          In alignment with our company ethos, Sanctuary Digital will soon be hosting a collaborative where we work with other companies in order to help each other grow. This means that this website will soon feature a page solely for collaborations.
+        </p>
+
+      </div>
+
+    </article>
+  </main>
 
   <footer>
     <div class="footer-container">
       <div class="image-container">
         <img src="./images/sanctuarydigital stacked.png" alt="Sanctuary Logo">
       </div>
-      <p class="thankyou">Thank you for visiting Sanctuary Web Development.</p>
+      <p>info@sanctuary-digital.com</p>
+      <p class="thankyou">Thank you for visiting Sanctuary Web Digital.</p>
       <p class="copyright">
-        &copy; 2023 Sanctuary Web Development. All rights reserved.
+        &copy; 2023 Sanctuary Digital. All rights reserved.
       </p>
     </div>
 
